# wichtel

./: .gitignore  input.yaml  pyproject.toml
tests/: test_wichtel.py
wichtel/: __main__.py  config.py  entrypoint.py  participants.py  report.py  solver.py  wichtel.py
