[tool.poetry]
name = "wichtel"
version = "0.1.0"
description = "A random match generator for christmas presents"
authors = ["Olaf Gladis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
